# LAMBReX

./: .gitignore  BUILDNOTES.txt  CMakeLists.txt  README.md  amrex_cmake.sh  conanfile.txt
examples/: CMakeLists.txt  amr_pulse.cpp  catch2InitTests.cpp  makefile  pulse.cpp
examples/debug/: CMakeLists.txt  amr_debug.cpp
include/: AmrSim.h  Lamb.h  Simulation.h  amr_help.h  component.h  d3q15_bgk.h  derived_var.h  field.h  lambrex.h  multilevel.h  pack_tools.h  range.hpp  velocity_set.h
src/: AmrSim.cpp  CMakeLists.txt  Lamb.cpp  Simulation.cpp  lambrex.cpp  makefile
tests/: AmrTest.cpp  AmrTest.h  CMakeLists.txt  blessed_pulse.out  catch2AMRTests.cpp  catch2InitTests.cpp  catch2Main.cpp  catch2RegressionTests.cpp  meta_basic.cpp  pulseRegression.h
